--- a/ollama/docker-compose.yml
+++ b/ollama/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     ports:
       - "11434:11434"
     volumes:
-      - ./models:/root/.ollama/models
+      - ./modelfiles:/root/.ollama/modelfiles
     deploy:
       resources:
         reservations:
